Show a bad feature flag infobar only for flags in about:flags on Android

I introduced a bad feature flag infobar for SignedHTTPExchange.
[1] https://chromium.googlesource.com/chromium/src/+/a753229
This CL introduced the bad flag infobar to Android Chrome not only for
SignedHTTPExchange but also for all bad flags which are listed as kBadFlags in
bad_flags_prompt.cc.
Before this CL, Android Chrome didn't show any bad flag infobar.

This change caused parformance regressions because a bad flag
"--ignore-certificate-errors-spki-list" is used for perfomance testing.
(crbug.com/822258#c13)

So I added the check of "--enable-automation" flag in ShowBadFlagsPrompt().
[2] https://chromium.googlesource.com/chromium/src/+/33b13b2
And I added --enable-automation flag in GetFromBrowserOptions() in catapult.
[3] https://chromium.googlesource.com/catapult.git/+/df3154e
I thought that this check already existed in startup_browser_creator_impl.cc for
Desktop not to show the infobar during tests.
But on Desktop, a infobar for the automation is always shown when the flag is set.
https://chromium.googlesource.com/chromium/src/+/7a66b24

After the CL [3] pixel_tests are failing on Windows.
https://chromium-review.googlesource.com/c/chromium/src/+/969827
And Catapult AutoRoll is being blocked by the failure.
https://crbug.com/824779
I think this is due to the shadow of the infobar.

What I wanted to do was to show the infobar for SignedHTTPExchange.
And I think we don't need to show the bad flag infobar on Android for the flags
which can't be added on non-rooted devices.

So this CL changes the behavior of Android Chrome to show the the infobar only
for flags which are available in about:flags.


Bug: 825082,803774,822258
Change-Id: Ieee2bee3f31219645c642d9238599ff82483feeb
Reviewed-on: https://chromium-review.googlesource.com/977252
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Reviewed-by: Tommy Martino <tmartino@chromium.org>
Reviewed-by: Kouhei Ueno <kouhei@chromium.org>
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547056}
Former-commit-id: 5555f7d5e3b1efeffc735ac2dbbfe286faaf0b58