chrome/browser/ui/startup/bad_flags_prompt.h
@@ -12,7 +12,9 @@ class WebContents;
 namespace chrome {
 
 // Shows a warning notification in |web_contents| that the app was run with
-// dangerous command line flags.
+// dangerous command line flags or dangerous flags in about:flags.
+// On Android, this method doesn't check any flags which are not available in
+// about:flags.
 void ShowBadFlagsPrompt(content::WebContents* web_contents);
 
 // Shows a warning about a specific flag.  Exposed publicly only for testing;
